cmake_minimum_required(VERSION 3.4)
project(hello_world_application)
add_library(formatter STATIC ~/workspace/projects/lab03/formatter_lib/formatter.cpp)
target_include_directories(formatter PUBLIC ~/workspace/projects/lab03/formatter_lib)
add_library(formatter_ex STATIC ~/workspace/projects/lab03/formatter_ex_lib/formatter_ex.cpp)
target_include_directories(formatter_ex PUBLIC ~/workspace/projects/lab03/formatter_ex_lib)
add_executable(hello_world hello_world.cpp)
target_link_libraries(formatter_ex formatter)
target_link_libraries(hello_world formatter_ex)
