cmake_minimum_required(VERSION 3.4)
project(solver_application)
add_library(solver_lib STATIC ~/workspace/projects/lab03/solver_lib/solver.cpp)
target_include_directories(solver_lib PUBLIC ~/workspace/projects/lab03/solver_lib)
add_library(formatter STATIC ~/workspace/projects/lab03/formatter_lib/formatter.cpp)
target_include_directories(formatter PUBLIC ~/workspace/projects/lab03/formatter_lib)
add_library(formatter_ex STATIC ~/workspace/projects/lab03/formatter_ex_lib/formatter_ex.cpp)
target_include_directories(formatter_ex PUBLIC ~/workspace/projects/lab03/formatter_ex_lib)
add_executable(solver equation.cpp)
target_link_libraries(formatter_ex formatter)
target_link_libraries(solver formatter_ex)
target_link_libraries(solver solver_lib)
